# cloud-manage-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
docs/: README.md  configuration.md  getting-started.md  oci-auth-implementation-plan.md  oci-compute-instance-implementation-plan.md  web-ui.md
docs/providers/: cloudflare.md  oracle.md
sdk/cloudflare-rust-sdk/: Cargo.toml  README.md
sdk/cloudflare-rust-sdk/src/auth/: config.rs  error.rs  mod.rs
sdk/cloudflare-rust-sdk/src/dns/: client.rs  mod.rs  models.rs
sdk/oci-rust-sdk/: Cargo.toml  README.md
sdk/oci-rust-sdk/docs/: README.md  authentication.md  compute.md  models.md
sdk/oci-rust-sdk/examples/: create_instance.rs  debug_signing.rs  getting_started.rs  list_images.rs  test_connection.rs
sdk/oci-rust-sdk/src/: lib.rs
sdk/oci-rust-sdk/src/auth/: config.rs  error.rs  file_config.rs  mod.rs  signer.rs
sdk/oci-rust-sdk/src/compute/: client.rs  mod.rs  models.rs
src/: cli.rs  config.rs  dns.rs  ghost_input.rs  main.rs  wizard.rs
src/common/: utils.rs
src/config/: config.rs  config_ops.rs  mod.rs  wizard.rs
src/instance/: mod.rs  operations.rs
src/providers/: oracle.rs
src/ui/: ghost_input.rs  mod.rs  ui.rs
src/web/: api.rs  assets.rs  mod.rs  server.rs
web/: index.html
