[package]
name = "cloud-manage"
version = "0.1.0"
edition = "2024"

[dependencies]
oci-rust-sdk = { path = "sdk/oci-rust-sdk" }
cloudflare-rust-sdk = { path = "sdk/cloudflare-rust-sdk" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dialoguer = "0.11"
console = "0.15"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
axum = "0.7"
tower-http = { version = "0.5", features = ["cors", "trace"] }
rust-embed = "8"
mime_guess = "2"
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
