[package]
name = "oci-rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
configparser = "3.1"
rsa = "0.9"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
pem = "3.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"