[package]
name = "oci-rust-sdk"
version = "0.1.0"
edition = "2021"

[dependencies]
configparser = "3.1"
rsa = { version = "0.9", features = ["sha2"] }
sha2 = { version = "0.10", features = ["oid"] }
base64 = "0.22"
rand = "0.8"
pem = "3.0"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"